--- a/static/application.css
+++ b/static/application.css
@@ -1,16 +1,16 @@
 body {
 	background: #002B36;
 	padding: 20px 50px;
-	margin: 0px;
+	margin: 0;
 }
 
 /* textarea */
 
 textarea {
 	background: transparent;
-	border: 0px;
+	border: 0;
 	color: #fff;
-	padding: 0px;
+	padding: 0;
 	width: 100%;
 	height: 100%;
 	font-family: monospace;
@@ -26,7 +26,7 @@ textarea {
 	z-index: -1000;
 	position: absolute;
 	top: 20px;
-	left: 0px;
+	left: 0;
 	width: 30px; /* 30 to get 20 away from box */
 	font-size: 13px;
 	font-family: monospace;
@@ -39,7 +39,7 @@ textarea {
 	position: absolute;
 	z-index: -2000;
 	top: 20px;
-	left: 0px;
+	left: 0;
 	width: 100%;
 	font-size: 13px;
 	font-family: monospace;
@@ -53,20 +53,44 @@ textarea {
 	content: '\00A0';
 }
 
+/* comment box */
+
+#comment-input {
+	position: absolute;
+	top: 0;
+	background-color: black;
+	width: 100%;
+	left: 0;
+}
+
+#comment-input input {
+	background-color: transparent;
+	border: 0;
+	color: #fff;
+	font-size: 13px;
+	font-family: monospace;
+	padding: 0;
+	margin: 0;
+	outline: none;
+	resize: none;
+	margin-left: 50px;
+	width: 100%;
+}
+
 /* code box when locked */
 
 #box {
-	padding: 0px;
-	margin: 0px;
+	padding: 0;
+	margin: 0;
 	width: 100%;
-	border: 0px;
+	border: 0;
 	outline: none;
 	font-size: 13px;
 	padding-right: 360px;
 }
 
 #box code {
-	padding: 0px;
+	padding: 0;
 	background: transparent !important; /* don't hide hastebox */
 }
 
@@ -74,8 +98,8 @@ textarea {
 
 #key {
 	position: fixed;
-	top: 0px;
-	right: 0px;
+	top: 0;
+	right: 0;
 	z-index: +1000; /* watch out */
 }
 
@@ -87,8 +111,8 @@ textarea {
 
 #box2 {
 	background: #08323c;
-	font-size: 0px;
-	padding: 0px 5px;
+	font-size: 0;
+	padding: 0 5px;
 }
 
 #box1 a.logo, #box1 a.logo:visited {
@@ -124,11 +148,11 @@ textarea {
 	height: 5px;
 	width: 10px;
 	background: url(hover-dropdown-tip.png);
-	bottom: 0px;
+	bottom: 0;
 	position: absolute;
 	margin: auto;
-	left: 0px;
-	right: 0px;
+	left: 0;
+	right: 0;
 }
 
 #box3, #messages li {
@@ -171,7 +195,7 @@ textarea {
 
 #messages {
 	position:fixed;
-	top:0px;
+	top: 0;
 	right:138px;
 	margin:0;
 	padding:0;
