--- a/static/application.css
+++ b/static/application.css
@@ -71,10 +71,13 @@ textarea {
 	font-family: monospace;
 	padding: 0;
 	margin: 0;
-	outline: none;
 	resize: none;
 	margin-left: 50px;
 	width: 100%;
+}
+
+#comment-input input:focus {
+	outline: none;
 }
 
 /* code box when locked */
